--- a/index.html
+++ b/index.html
@@ -196,9 +196,6 @@
 
     /* =========================================================
        W3 + W2 BASIS (sichtbar): Q1 + Q2 (noch NICHT skaliert)
-       - W3 liegt in Q1 (2E–4G)
-       - W2 liegt in Q2 (5E–7G)
-       - später wird dieses gesamte Layer um axis-y vertikal skaliert (KIP)
        ========================================================= */
     .w3w2BasisLayer{
       position:absolute;
@@ -206,7 +203,6 @@
       z-index: 7;
       pointer-events:none;
 
-      /* später für KIP: scaleY(0.5) um die Achse */
       transform-origin: 50% var(--axis-y);
       transform: scaleY(var(--w3w2-scale-y, 1));
     }
@@ -220,13 +216,13 @@
       clip-path: inset(var(--step) var(--step) var(--step) var(--step));
     }
 
-    /* Linker Kontaktschatten (nur links), Q1 (W3) und Q2 (W2) */
+    /* ✅ Pseudo-Ebene: linke Schattenkante im Boxinneren (deutlich) */
     .leftContactShadow{
       position:absolute;
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      border-radius: clamp(10px, 2.2vmin, 18px);
       pointer-events:none;
+      border-radius: clamp(10px, 2.2vmin, 18px);
     }
     .leftContactShadow::before{
       content:"";
@@ -235,11 +231,12 @@
       border-radius: inherit;
       background: linear-gradient(
         90deg,
-        rgba(0,0,0,0.36),
-        rgba(0,0,0,0.00) 26%
+        rgba(0,0,0,0.55),
+        rgba(0,0,0,0.18) 18%,
+        rgba(0,0,0,0.00) 36%
       );
-      filter: blur(0.6px);
-      opacity: 0.95;
+      filter: blur(0.7px);
+      opacity: 1;
     }
 
     /* Positionen der Schatten exakt unter den Flächen */
@@ -248,7 +245,6 @@
 
     .cube,
     .cube2,
-    .cubeFinal,
     .cubeW3,
     .cubeW2{
       position:absolute;
@@ -279,12 +275,12 @@
       z-index: 6;
     }
 
-    /* W2 Basis (links) */
+    /* W2 Basis (links, unsichtbar) */
     .pairLayer .cube{
       left: var(--cube-x);
       top:  var(--cube-y);
     }
-    /* W1 Basis (rechts) */
+    /* W1 Basis (rechts, unsichtbar) */
     .pairLayer .cube2{
       left: calc(4 * var(--step));
       top:  calc(1 * var(--step));
@@ -294,11 +290,18 @@
     .w3w2BasisLayer .cubeW3{
       left: calc(4 * var(--step));
       top:  calc(1 * var(--step));
+      /* ✅ Innenkante (unten) scharf */
+      border-bottom-left-radius: 0 !important;
+      border-bottom-right-radius: 0 !important;
     }
+
     /* W2 in Q2 (5E–7G) */
     .w3w2BasisLayer .cubeW2{
       left: calc(4 * var(--step));
       top:  calc(4 * var(--step));
+      /* ✅ Innenkante (oben) scharf */
+      border-top-left-radius: 0 !important;
+      border-top-right-radius: 0 !important;
     }
 
     .slot{
@@ -332,18 +335,19 @@
       user-select:none;
     }
 
+    /* ✅ extra Rotation (für 5/6 = 180°) via CSS Variable */
     .slot .num > span{
       display:inline-block;
       font-weight: 900;
       color: #111;
       font-size: clamp(18px, 4.2vmin, 36px);
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
-      transform: rotate(var(--num-rot, 0deg));
+      transform: rotate(calc(var(--num-rot, 0deg) + var(--extra-rot, 0deg)));
       transform-origin: 50% 50%;
       position: relative;
     }
 
-    /* ✅ Punkt für 6 und 9 */
+    /* Punkt für 6 und 9 */
     .slot .num > span.dot::after{
       content:"";
       position:absolute;
@@ -351,15 +355,13 @@
       height: clamp(3px, 0.55vmin, 6px);
       border-radius: 50%;
       background: #111;
-
       left: 100%;
       top: 72%;
       transform: translate(25%, -50%);
-
       box-shadow: 0 1px 0 rgba(255,255,255,0.25);
     }
 
-    /* Leserichtungen (bleiben wie jetzt – NICHT mehr ändern) */
+    /* Leserichtungen */
     .read-south { --num-rot: calc(var(--rotSign) * 0deg); }
     .read-west  { --num-rot: calc(var(--rotSign) * 90deg); }
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
@@ -382,18 +384,18 @@
     .w2q2-6g{ left: calc(6 * var(--step)); top: calc(5 * var(--step)); }  /* 6G */
     .w2q2-7g{ left: calc(6 * var(--step)); top: calc(6 * var(--step)); }  /* 7G */
 
-    /* ===== W3 in Q1 (2E–4G): leere Fläche + Slots auf 4E,4F,2G,3G ===== */
+    /* ===== W3 in Q1: Slots auf 4E,4F,2G,3G ===== */
     .w3q1-4e{ left: calc(4 * var(--step)); top: calc(3 * var(--step)); }  /* 4E */
     .w3q1-4f{ left: calc(5 * var(--step)); top: calc(3 * var(--step)); }  /* 4F */
     .w3q1-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }  /* 2G */
     .w3q1-3g{ left: calc(6 * var(--step)); top: calc(2 * var(--step)); }  /* 3G */
 
-    /* ✅ Divider für W3/W2 (horizontal, zwischen Q1 und Q2) */
+    /* Divider horizontal zwischen Q1 und Q2 */
     .divider-EG-cols{
       position:absolute;
-      left: calc(4 * var(--step));                    /* ab E */
-      top:  calc(var(--axis-y) - 1px);                /* zwischen 4/5 */
-      width: calc(2 * var(--step) + var(--cell));     /* E..G Breite (3 Zellen) */
+      left: calc(4 * var(--step));
+      top:  calc(var(--axis-y) - 1px);
+      width: calc(2 * var(--step) + var(--cell));
       height: 2px;
 
       background: rgba(234,215,190,0.5);
@@ -437,9 +439,9 @@
     }
 
     @keyframes popIn {
-      0%   { transform: rotate(var(--num-rot, 0deg)) scale(0.70); filter: brightness(1.05); }
-      60%  { transform: rotate(var(--num-rot, 0deg)) scale(1.10); }
-      100% { transform: rotate(var(--num-rot, 0deg)) scale(1.00); filter: none; }
+      0%   { transform: rotate(calc(var(--num-rot,0deg) + var(--extra-rot,0deg))) scale(0.70); filter: brightness(1.05); }
+      60%  { transform: rotate(calc(var(--num-rot,0deg) + var(--extra-rot,0deg))) scale(1.10); }
+      100% { transform: rotate(calc(var(--num-rot,0deg) + var(--extra-rot,0deg))) scale(1.00); filter: none; }
     }
     .slot.pop .num > span{
       animation: popIn 220ms ease-out;
@@ -461,9 +463,7 @@
       <div class="ball" aria-label="Kugel"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- =========================
-           W2KIP + W1KIP (unsichtbar, gespeichert)
-           ========================= -->
+      <!-- W2KIP + W1KIP (unsichtbar, gespeichert) -->
       <div class="pairLayer" id="pairLayer" aria-label="W2+W1 als Gruppe (KIP, gespeichert)">
         <div class="cube" aria-label="W2 Basis/KIP"></div>
         <div class="cube2" aria-label="W1 Basis/KIP"></div>
@@ -479,11 +479,7 @@
         <div class="slot slot2-4e read-west"  data-slot="T4"><div class="num"><span></span></div></div>
       </div>
 
-      <!-- =========================
-           W3 + W2 BASIS sichtbar (noch ohne KIP-Skalierung)
-           W3: leerer Würfel + 4 Zahlenblättchen (random aus Rest 4)
-           W2: zeigt die 4 W2-Zahlen (S1..S4) in Q2
-           ========================= -->
+      <!-- W3 + W2 BASIS sichtbar -->
       <div class="w3w2BasisLayer" id="w3w2BasisLayer" aria-label="W3+W2 Basis (Q1/Q2)">
         <!-- W3 Fläche (leer) -->
         <div class="cubeW3" aria-label="W3 Fläche (leer)"></div>
@@ -591,6 +587,13 @@
       if (number === 6 || number === 9) span.classList.add("dot");
     }
 
+    // ✅ 5 und 6 immer 180° drehen (egal wo sie landen)
+    function setExtraRot(span, number){
+      if(!span) return;
+      const rot = (number === 5 || number === 6) ? "180deg" : "0deg";
+      span.style.setProperty("--extra-rot", rot);
+    }
+
     function getUniqueRandomNumbers(count, min, max){
       const pool = [];
       for(let i=min; i<=max; i++) pool.push(i);
@@ -602,13 +605,15 @@
     }
 
     function syncW2Q2FromKip(){
-      // W2 Q2 zeigt S1..S4 exakt 1:1 (inkl. Punkt-Klasse)
       ["S1","S2","S3","S4"].forEach(k => {
         const src = slotSpanEls.get(k);
         const dst = w2q2Span.get(k);
         if(!src || !dst) return;
         dst.textContent = src.textContent;
         dst.classList.toggle("dot", src.classList.contains("dot"));
+
+        const n = parseInt(dst.textContent, 10);
+        setExtraRot(dst, n);
       });
     }
 
@@ -623,6 +628,7 @@
         const n = nums12[idx];
         span.textContent = String(n);
         setDot(span, n);
+        setExtraRot(span, n);
       });
 
       // Rest 4 -> W3 U1..U4
@@ -633,6 +639,7 @@
         const n = nums12[8 + idx];
         span.textContent = String(n);
         setDot(span, n);
+        setExtraRot(span, n);
       });
 
       // W2 Q2 aktualisieren
